#81 Replace POST /user/register with POST /user for user creation
